--- a/src/features/products/DeleteProductModal.module.css
+++ b/src/features/products/DeleteProductModal.module.css
@@ -16,7 +16,7 @@
   background: white;
   border-radius: 12px;
   padding: 2rem;
-  width: 300px;
+  width: 400px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   text-align: center;
   animation: fadeIn 0.3s ease-out;
@@ -34,8 +34,8 @@
 }
 
 .deleteButton {
-  width:80px;
-  background-color: #e74c3c;
+  width:160px;
+  background-color: #F43F5E;
   font-size: 1.3rem;
   color: white;
   border: none;
@@ -45,10 +45,10 @@
 }
 
 .cancelButton {
-  width:80px;
+  width:160px;
   font-size: 1.3rem;
-  background-color: #bdc3c7;
-  color: white;
+  background-color: #DFDFDF;
+  color: #282828CC;
   border: none;
   padding: 0.5rem 1rem;
   border-radius: 8px;
