--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,23 @@
   background-color: #f7f8f8;
   direction: rtl;
   box-sizing: border-box;
+  
+}
+@font-face {
+  font-family: vazir;
+  src: url(./assets/fonts/Vazir/Vazirmatn-Medium.eot);
+  src: url(./assets/fonts/Vazir/Vazirmatn-Medium.ttf);
+  src: url(./assets/fonts/Vazir/Vazirmatn-Medium.woff);
+  src: url(./assets/fonts/Vazir/Vazirmatn-Medium.woff2);
+}
+body {
+  font-family: vazir;
+}
+button{
+  font-family: vazir;
+
+}
+::placeholder{
+    font-family: vazir;
+
 }
